# quteman

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bootstrap.sh
conan/: conanfile.txt
resources/: CMakeLists.txt  quteman.desktop
src/: CMakeLists.txt
src/about/: about.cpp  about.h  about.ui
src/app/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/utils/: util.h
